# cmake-crosscompile-custom-tool-example

./: .gitignore  CMakeLists.txt  README.md  build_android.ps1  build_host.ps1
source/: main.cpp
tool/: CMakeLists.txt
tool/source/: tool.cpp
